src/styles/pages/servicios-industriales.css
/* ... */
div.hidden {
    display: none;
}

.detailed-services__molds-wrapper {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 5rem;
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0.3s;
    align-items: stretch;
}

.detailed-services__molds-process {
    align-self: center;
}

.detailed-services__molds-process h3 {
    margin: 0;
    font-size: var(--fs-h3-lg);
    text-align: center;
}

.detailed-services__process-item {
    display: flex;
    align-items: flex-start;
    gap: 1.6rem;
    margin-top: 3.2rem;
}

.detailed-services__process-number {
    width: 4.8rem;
    height: 4.8rem;
    background-color: #3b82f6;
    flex-shrink: 0;
    border-radius: 999rem;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #fff;
    font-size: 1.6rem;
    font-weight: 600
}

.detailed-services__process-header {
    display: flex;
    align-items: center;
    gap: 0.8rem;
    margin-bottom: 0.8rem;
}

.detailed-services__process-header h4 {
    margin: 0;
    font-size: 1.8rem;
    font-weight: 600;
    line-height: 1.5;

}

.detailed-services__process-description {
    margin: 0;
    font-size: 1.6rem;
    color: var(--color-font-section-p);
    line-height: 1.5;
}

.detailed-services__molds-specs {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
.detailed-services__molds-specs > img{  
    width: 100%;
    max-width: 60rem;
    height: auto;
    object-fit: cover;
    border-radius: 1rem;
    box-shadow:
    0 10px 15px -3px rgba(0, 0, 0, 0.1),
    0 4px 6px -4px rgba(0, 0, 0, 0.1);
}


.detailed-services__technical-specs {
    background-color: #fff;
    border-radius: 1rem;
    margin-top: 3rem;
    width: 100%;
    max-width: 60rem;
    text-align: center;
}
.detailed-services__specs-header {
    padding: 2.4rem;    
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.8rem;
}

.detailed-services__specs-header h3 {
    margin: 0;
    font-size: var(--fs-h3-md);
    font-weight: 700;
}

.detailed-services__specs-body {
    padding: 0 2.4rem 2.4rem 2.4rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1.6rem;
    line-height: 1.5;
}


.detailed-services__specs-body h4 {
    margin: 0;
    font-size: 1.4rem;
    font-weight: 600;
}

.detailed-services__specs-body p {
    margin: 0;
    font-size: 1.4rem;
    color: var(--color-font-section-p);
}

/* section detailed-services design */
.detailed-services__design-wrapper {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
    gap: 3rem;
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0.3s;
}

.detailed-services__design-item {
    background-color: #fff;
    border-radius: 1rem;
    transition: box-shadow 0.2s ease;
}

.detailed-services__design-item:hover {
    box-shadow: .1rem .5rem 1rem rgba(0, 0, 0, 0.2);

}

.detailed-services__design-header {
    padding: 2.4rem;
    display: flex;
    flex-direction: column;
}

.detailed-services__design-header-icon{
    width: 4.8rem;
    height: 4.8rem;
    background-color: #dcfce7;
    border-radius: 0.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 1.6rem;
}

.detailed-services__design-header h3{
    font-size: 1.8rem;
    margin: .6rem 0 0 0;
    font-weight: 600;
}

.detailed-services__design-header p {
    margin: 0;
    font-size: 1.3rem;
    margin: .6rem 0 0 0;
    line-height: 1.5;
    color: var(--color-font-section-p);
}

.detailed-services__design-body {
    padding: 0 2.4rem 2.4rem 2.4rem;
}

.detailed-services__design-body ul li{
    display: flex;
    gap: 0.8rem;
    font-size: 1.4rem;
    color: var(--color-font-section-p);
    line-height: 1.4;
}

.detailed-services__design-body ul li:not(:first-child){
    margin-top: 0.6rem;
}

.detailed-services__design-body ul li img {
    width: 1.6rem;
    height: 1.6rem;
}


/* section workflow */

.workflow .section__text p{
    max-width: 83rem;
}

.workflow__grid {
    flex: 1 1 100%;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 3rem;
    justify-content: end;
}

.workflow__item {
    text-align: center;
    line-height: 1.5;
    position: relative;
    overflow: visible;
}

.workflow__icon {
    width: 6.4rem;
    height: 6.4rem;
    border-radius: 999px;
    margin: 0 auto 1.6rem auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.workflow__icon--bulb {
    background-color: #fef9c3;
}
.workflow__icon--cad {
    background-color: #dcfce7;
}
.workflow__icon--eye {
    background-color: #dbeafe;
}
.workflow__icon--gear {
    background-color: #f3e8ff;
}
.workflow__icon--check {
    background-color: #ffedd5;
}

.workflow__badge {
    font-size: 1.4rem;
    color: #6b7280;
    margin-bottom: 0.8rem;
    font-weight: 700;
}

.workflow__item h3 {
    margin: 0 0 0.8rem 0;
    font-size: 1.8rem;
    font-weight: 600;
}

.workflow__item p {
    font-size: 1.4rem;
    color: var(--color-font-section-p);
    margin: 0;
}

.workflow__item > img {
    position: absolute;
    top: 3rem;
    right: -1.6rem;
    z-index: 10;
}

/* section form */

.services-request {
    background-color: var(--background-gray-light-section);
}
.services-request__form {
    border: 1px solid #9299a45d;
    border-radius: 1rem;
    max-width: 67rem;
    background-color: var(--background-color-light);
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
}

.services-request__form-header {
    padding: 2.4rem;
    text-align: center;
}

.services-request__form-header > h3 {
    margin: 0;
    font-size: var(--fs-h3-lg);
    font-weight: 700;
}
/* ... */

